--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,22 @@
 .test_style {
     color: red;
 }
+
+.main_menu {
+    height: 7%;
+    background-color: black;
+    text-align: center;
+}
+
+.menu_item {
+    margin-left: 2%;
+    margin-right: 2%;
+    font-size: 150%;
+    color: white;
+    font-family: Helvetica;
+}
+
+.menu_item:hover {
+    color: #D2B48C;
+    cursor: pointer;
+}
