--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
 .main-menu {
-    height: 7%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     background-color: black;
     text-align: center;
 }
 
 .menu-item {
-    margin-left: 2%;
-    margin-right: 2%;
-    padding-top: 10%;
-    font-size: 150%;
+    margin-left: 1%;
+    margin-right: 1%;
+    font-size: 130%;
     color: white;
     font-family: Helvetica;
 }
@@ -22,12 +22,7 @@
     position: relative;
 }
 
-.header-text {
+.header-logo {
     position: absolute;
-    font-size: 600%;
-    color: white;
-    font-family: Helvetica;
-    left: 40%;
-    bottom: 50%;
-    text-shadow: 4px 4px 15px black;
+    bottom:50%;
 }
