--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,19 @@
 .main-menu {
     padding-top: 1%;
     padding-bottom: 1%;
-    background-color: black;
+    background-color: #121820;
+}
+
+.menu-list {
     text-align: center;
+    list-style: none;
 }
 
 .menu-item {
+    display: inline-block;
     margin-left: 1%;
     margin-right: 1%;
-    font-size: 130%;
+    font-size: 1.2em;
     color: white;
     font-family: Helvetica;
 }
@@ -41,7 +46,7 @@
 
 .h1-text {
     margin-bottom: 1%;
-    font-size: 250%;
+    font-size: 2.5em;
     font-family: Helvetica;
 }
 
@@ -52,7 +57,7 @@
 
 .content-text {
     font-family: Helvetica;
-    font-size: 160%;
+    font-size: 1.7em;
 }
 
 .right-col {
