--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,12 @@
     font-family: Helvetica;
 }
 
+@media screen and (max-width: 1024px) {
+    .menu-item {
+        display: block;
+    }
+}
+
 .menu_item:hover {
     color: #D2B48C;
     cursor: pointer;
