--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,9 @@
 @media screen and (max-width: 1024px) {
     .menu-item {
         display: block;
+        font-size: 2em;
+        margin-left: 0%;
+        margin-right: 0%;
     }
 }
 
