--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,8 @@
         font-size: 2em;
         margin-left: 0%;
         margin-right: 0%;
+        margin-top: 1.7%;
+        margin-bottom: 1.7%;
     }
 }
 
