--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,9 @@
 
 .header-logo {
     position: absolute;
-    bottom:50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%)
 }
 
 .main-table {
