--- a/styles.css
+++ b/styles.css
@@ -18,17 +18,6 @@
     font-family: Helvetica;
 }
 
-@media screen and (max-width: 1024px) {
-    .menu-item {
-        display: block;
-        font-size: 2em;
-        margin-left: 0%;
-        margin-right: 0%;
-        margin-top: 1.7%;
-        margin-bottom: 1.7%;
-    }
-}
-
 .menu-item:hover {
     color: #D2B48C;
     cursor: pointer;
@@ -74,20 +63,50 @@
 }
 
 .right-col {
-    width:48%;
+    width:50%;
     float:right;
 }
 
+@media screen and (max-width: 1024px) {
+  .menu-item {
+      display: block;
+      font-size: 2em;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 1.7%;
+      margin-bottom: 1.7%;
+  }
+  .top-row {
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .left-col {
+    float:none;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2%;
+  }
+  .right-col {
+    float: none;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+/* --------Gallery---------------------- */
+
 .gallery {
-    margin-left: 5%;
     --size: min(60vmin, 400px);
     box-shadow: 
       0 0 10px #0002,
       0 20px 40px -20px #0004;
     width: var(--size);
     height: var(--size);
-    background: #fff;
-    border: 6px solid #fff;
+    background: #121820;
+    border: 6px solid #121820;
     display: grid;
     grid-template-rows: 50% 50%;
     grid-template-columns: 1fr 1fr;
@@ -231,3 +250,4 @@
       moveHorizontal 16s 21.5s 1;
     animation-fill-mode: forwards;
   }
+/* ---------!Gallery------------- */
