--- a/styles.css
+++ b/styles.css
@@ -99,14 +99,15 @@
   }
   .left-col {
     float:none;
-    text-align: center;
+    text-align: justify;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2%;
+    width: 100%;
   }
   .right-col {
     float: none;
-    text-align: center;
+    text-align: justify;
     margin-left: auto;
     margin-right: auto;
   }
