--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 .main-menu {
+    display: block;
     padding-top: 1%;
     padding-bottom: 1%;
     background-color: #121820;
@@ -47,9 +48,8 @@
 .cancel-icon {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 4%;
+  margin-top: 2%;
   width: 20%;
-  height: 7%;
   cursor: pointer;
   display: none;
 }
