--- a/style.css
+++ b/style.css
@@ -62,10 +62,10 @@
 }
 /* ------------ */
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 600px) {
     /* Главный экран */
     .main-background {
-        height: 100%;
+        aspect-ratio: 9/16;
     }
     /* ------------ */
 }
