--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    text-shadow: 4px 4px 10px black;
+    text-shadow: 4px 4px 4px black;
 }
 .main-address {
     margin-top: 1px;
@@ -61,12 +61,34 @@
     cursor: pointer;
 }
 /* ------------ */
-
+/* Content */
+.zagolovok{
+    font-family: Helvetica;
+    font-size: 30px;
+}
+.col{
+    white-space: nowrap;
+}
+.col-item{
+    font-family: Helvetica;
+    white-space: normal;	
+	display: inline-block;
+    font-size: 20px;
+	width: 48%;
+    vertical-align: top;
+}
+/* ------- */
+/* footer */
+.footer {
+    background-color: #121820;
+    margin-top: 10px;
+    width: 100%;
+    height: 60px;
+}
+/* ------ */
 @media screen and (max-width: 800px) {
     /* Главный экран */
     .main-background {
-        aspect-ratio: 9/16;
-        object-fit: cover;
     }
     /* ------------ */
 }
