--- a/style.css
+++ b/style.css
@@ -88,16 +88,31 @@
     display: inline-block;
     margin-left: 40px;
 }
-.spisok{
-    margin-top: 40px;
+
+.help-background{
+    background-color: #f5f8fc;
+    height: 300px;
+    margin-top: 60px;
+}
+
+.help{
     font-family: Helvetica;
-    /* text-align: center; */
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    font-style: italic;
+    width: 40%;
+}
+
+.spisok{
+    margin-top: 60px;
+    font-family: Helvetica;
+    text-align: center;
     margin: 0 auto;
 }
 
 .price {
     position: relative;
-    margin-top: 40px;
     background-color: #121820;
     width: 100%;
     height: 300px;
