--- a/style.css
+++ b/style.css
@@ -166,9 +166,9 @@
 
 .dop{
     color: white;
-    font-weight: bold;
     text-align: center;
     font-size: 15px;
+    font-style: italic;
 }
 
 .time {
@@ -185,6 +185,8 @@
     color:white;
     font-weight: bold;
     font-size: 17px;
+    position: relative;
+    top: -13px;
 }
 /* ------- */
 /* footer */
