--- a/style.css
+++ b/style.css
@@ -235,7 +235,33 @@
 .footer {
     background-color: #121820;
     width: 100%;
-    height: 60px;
+    height: 150px;
+    position: relative;
+}
+
+.footer-adress{
+    font-size: 20px;
+    cursor: pointer;
+    position: absolute;
+    font-family: Helvetica;
+    color: white;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -50%);
+}
+
+.copyright{
+    font-size:15px;
+    color: #858181;
+    font-family: Helvetica;
+    position: absolute;
+    left: 50%;
+    top: 90%;
+    transform: translate(-50%, -50%);
+}
+
+.footer-adress:hover{
+    color:#D2B48C;
 }
 /* ------ */
 @media screen and (max-width: 800px) {
