--- a/style.css
+++ b/style.css
@@ -268,6 +268,7 @@
         object-fit: cover;
     }
     .menu-item {
+        margin-left: 0px;
         display: block;
         margin-top: 10px;
         font-size: 20px;
