--- a/style.css
+++ b/style.css
@@ -227,6 +227,9 @@
 .city:hover{
     background-color: #D2B48C;
 }
+.menu-background{
+    height: 700px;
+}
 /* ------- */
 /* footer */
 .footer {
