--- a/style.css
+++ b/style.css
@@ -35,6 +35,23 @@
     margin-top: 1px;
     font-size: 30px;
 }
+.circles{
+    width: 100px;
+    height: 10px;
+    position: absolute;
+    top: 96%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.circle{
+    margin-left: 10px;
+    display: inline-block;
+    background: none;
+    border: 0.1875em solid white;
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+}
 /* ------------- */
 
 /* Главное меню */
