--- a/style.css
+++ b/style.css
@@ -52,6 +52,24 @@
     height: 10px;
     width: 10px;
 }
+.str-left{
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: 50%;
+    left: 20%;
+    transform: translate(-50%, -50%);
+}
+.str-right{
+    cursor: pointer;
+    height: 50px;
+    width: 50px;
+    position: absolute;
+    top: 50%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+}
 /* ------------- */
 
 /* Главное меню */
