--- a/style.css
+++ b/style.css
@@ -312,6 +312,12 @@
         margin-top: 10px;
         font-size: 20px;
     }
+    .str-left{
+        display: none;
+    }
+    .str-right{
+        display: none;
+    }
     /* ---------- */
     /* Content */
     .gallery{
